--- a/info.plist
+++ b/info.plist
@@ -22,6 +22,8 @@
 			<string>1473BF02-466B-4F5F-B694-81703E4B6E76</string>
 			<string>FD59E166-A9BD-40FD-821F-E8AFEA5175A0</string>
 			<string>C145B244-D9A6-43C6-9011-B84D00F7FE96</string>
+			<string>DF2093BA-EA37-4546-9ADA-C17A13CEBDA9</string>
+			<string>385A50A5-37DB-4B58-A6B0-1849D17A322F</string>
 		</array>
 		<key>items</key>
 		<array>
@@ -99,6 +101,8 @@
 		<string>61F92184-1A50-4310-9F75-C9CD2C8819FA</string>
 		<string>4981F52A-F663-45FC-AE25-EE211E88BA05</string>
 		<string>F10674C0-D55D-4EFD-88DE-DC60C3EE6562</string>
+		<string>DF2093BA-EA37-4546-9ADA-C17A13CEBDA9</string>
+		<string>385A50A5-37DB-4B58-A6B0-1849D17A322F</string>
 		<string>D609BF3F-BEDB-41AE-BA6F-903CC77A7BB3</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
 		<string>8926CAFE-1CF3-4CF9-A056-4FF90F596E9A</string>
