Disable smart typing pairs inside regex character classes in Language Grammars
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@6481 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -105,6 +105,7 @@
 		<string>385A50A5-37DB-4B58-A6B0-1849D17A322F</string>
 		<string>D609BF3F-BEDB-41AE-BA6F-903CC77A7BB3</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
+		<string>247A4984-203C-46ED-B973-82A7196A5C5C</string>
 		<string>8926CAFE-1CF3-4CF9-A056-4FF90F596E9A</string>
 		<string>EAACA103-A5C9-4D33-BB23-BA908CB83F22</string>
 		<string>DA3A550A-F4AF-4CFD-935F-8687FA17DC4B</string>
