Tweak language grammar to distinguish between single-quoted and double-quoted regexps. Add new snippet to insert 2 single quotes when the user types one in a single-quoted string
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@6482 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -887,18 +887,18 @@
 						</dict>
 					</dict>
 					<key>name</key>
-					<string>string.regexp.oniguruma.tm-grammar</string>
+					<string>string.regexp.oniguruma.single.tm-grammar</string>
 					<key>patterns</key>
 					<array>
-						<dict>
-							<key>include</key>
-							<string>source.regexp.oniguruma</string>
-						</dict>
 						<dict>
 							<key>match</key>
 							<string>''</string>
 							<key>name</key>
 							<string>constant.character.escape.apostrophe.tm-grammar</string>
+						</dict>
+						<dict>
+							<key>include</key>
+							<string>source.regexp.oniguruma</string>
 						</dict>
 					</array>
 				</dict>
@@ -924,9 +924,15 @@
 						</dict>
 					</dict>
 					<key>name</key>
-					<string>string.regexp.oniguruma.tm-grammar</string>
+					<string>string.regexp.oniguruma.double.tm-grammar</string>
 					<key>patterns</key>
 					<array>
+						<dict>
+							<key>match</key>
+							<string>\\\\|\\"</string>
+							<key>name</key>
+							<string>constant.character.escape.tm-grammar</string>
+						</dict>
 						<dict>
 							<key>include</key>
 							<string>source.regexp.oniguruma</string>
