--- a/info.plist
+++ b/info.plist
@@ -120,6 +120,7 @@
 		<string>D9B7683F-308C-4A42-92FB-6DFC06240A92</string>
 		<string>FD59E166-A9BD-40FD-821F-E8AFEA5175A0</string>
 		<string>C145B244-D9A6-43C6-9011-B84D00F7FE96</string>
+		<string>012C6C9B-07CC-40B8-A10B-B95B253A94A1</string>
 		<string>8C3D6E62-E865-4655-9B20-E3B95F07F9B6</string>
 		<string>3E5051E7-18CF-4BD4-89A5-045416831972</string>
 		<string>36B66AAB-42A5-4366-B7C1-790A749181D4</string>
