• exclude text.plain.release-notes from the separator transformations since the symbol (for the pop-up) is in the separator line itself (thus we want t preserve it)
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@6576 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -21,6 +21,7 @@
 			<string>A611946B-D67F-4B16-ABC7-ECBBCC0F6331</string>
 			<string>1473BF02-466B-4F5F-B694-81703E4B6E76</string>
 			<string>FD59E166-A9BD-40FD-821F-E8AFEA5175A0</string>
+			<string>CA39054D-0E69-4557-AB37-47F256B1694F</string>
 			<string>C145B244-D9A6-43C6-9011-B84D00F7FE96</string>
 			<string>DF2093BA-EA37-4546-9ADA-C17A13CEBDA9</string>
 			<string>385A50A5-37DB-4B58-A6B0-1849D17A322F</string>
@@ -101,6 +102,7 @@
 		<string>61F92184-1A50-4310-9F75-C9CD2C8819FA</string>
 		<string>4981F52A-F663-45FC-AE25-EE211E88BA05</string>
 		<string>F10674C0-D55D-4EFD-88DE-DC60C3EE6562</string>
+		<string>CA39054D-0E69-4557-AB37-47F256B1694F</string>
 		<string>DF2093BA-EA37-4546-9ADA-C17A13CEBDA9</string>
 		<string>385A50A5-37DB-4B58-A6B0-1849D17A322F</string>
 		<string>D609BF3F-BEDB-41AE-BA6F-903CC77A7BB3</string>
@@ -109,6 +111,7 @@
 		<string>8926CAFE-1CF3-4CF9-A056-4FF90F596E9A</string>
 		<string>EAACA103-A5C9-4D33-BB23-BA908CB83F22</string>
 		<string>DA3A550A-F4AF-4CFD-935F-8687FA17DC4B</string>
+		<string>F243A037-6F40-4D98-BCBA-5E3B406728A6</string>
 		<string>985E70CD-0539-4E00-B0B9-F38D9789B8F3</string>
 		<string>1515233D-64A7-48B3-A032-895A2A2E9789</string>
 		<string>6F3A4873-C006-471C-BC7E-7EF289C685B4</string>
@@ -131,6 +134,8 @@
 		<string>D738436A-B700-4299-A7D7-A242BDDF3A67</string>
 		<string>4AB06A04-02CF-4E7B-9E7E-07747A68160C</string>
 		<string>A9191F2E-8FAC-41B9-B729-9663E42452DD</string>
+		<string>8A6A5847-998C-4403-9268-072ED4262EC6</string>
+		<string>65EDFD8E-0A95-4AB8-AF07-53AD63B00E06</string>
 	</array>
 	<key>uuid</key>
 	<string>5A9D4FC6-6CBE-11D9-A21B-000D93589AF6</string>
