Add the following keys to the bundle’s info.plist:
contactName:
   The full name of the contact for this bundle.
contactEmailRot13:
   A ROT13 encoded email address for the bundle contact (we obfuscate it to avoid spammers from picking up the files, seeing how bundles will often be available via anonymous svn over http).
description:
   A short description for this bundle. Do link to more info about the language (or whatever) the bundle is about. I decided on using HTML for this (but leave out the initial paragraph tag) since it seemed like overkill to run a single line of text through Markdown.pl, just to convert [foo](link) into <a href="link">foo</a>

Many of the current descriptions could use some improvements, I just wanted to get the ball rolling :)


git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@6718 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>contactEmailRot13</key>
+	<string>guebj-njnl-1@znpebzngrf.pbz</string>
+	<key>contactName</key>
+	<string>Allan Odgaard</string>
 	<key>deleted</key>
 	<array>
 		<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
@@ -12,6 +16,8 @@
 		<string>20B6054F-965B-4C9B-91DA-E6868A721954</string>
 		<string>16B36407-9F9D-47E0-93B8-80BA881066B5</string>
 	</array>
+	<key>description</key>
+	<string>This bundle has functionality related to developing bundles for TextMate and a few other things.</string>
 	<key>mainMenu</key>
 	<dict>
 		<key>excludedItems</key>
