Add punctuation.whitespace to the language grammar grammar.
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@7376 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -1459,7 +1459,7 @@
 								)?
 							  | meta(?:\.[^']*)?
 							  | punctuation(?:
-									\.(?:definition|section|separator|terminator)
+									\.(?:definition|section|separator|terminator|whitespace)
 									(?:\.[^']*)?
 								)?
 							  | source(?:\.[^']*)?
