Allow comment key-pair inside a capture item.
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@7409 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -1199,6 +1199,10 @@
 													<string>#comment</string>
 												</dict>
 												<dict>
+													<key>include</key>
+													<string>#comment-keyword</string>
+												</dict>
+												<dict>
 													<key>begin</key>
 													<string>\b(name)\s*(=)</string>
 													<key>beginCaptures</key>
