• move scope completion command
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@7624 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -44,6 +44,7 @@
 		<string>6F3A4873-C006-471C-BC7E-7EF289C685B4</string>
 		<string>985E70CD-0539-4E00-B0B9-F38D9789B8F3</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
+		<string>DF2093BA-EA37-4546-9ADA-C17A13CEBDA9</string>
 	</array>
 	<key>description</key>
 	<string>This bundle has functionality related to developing bundles for TextMate and a few other things.</string>
