• update bundle descriptions, add me as maintainer for Bundle Development (until I convince Michael Sheets to take over :) ) • one UUID was not carried properly over from the info.plist (moved items generally should be in the deleted array of the source, since the snippet is still in the bundle until the user upgrades TextMate, that is, it exists in the default bundle included with TextMate, so even though it is removed in the svn version, it will be found “deeper down”)
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@7625 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -45,9 +45,10 @@
 		<string>985E70CD-0539-4E00-B0B9-F38D9789B8F3</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
 		<string>DF2093BA-EA37-4546-9ADA-C17A13CEBDA9</string>
+		<string>012C6C9B-07CC-40B8-A10B-B95B253A94A1</string>
 	</array>
 	<key>description</key>
-	<string>This bundle has functionality related to developing bundles for TextMate and a few other things.</string>
+	<string>This bundle has functionality which add to the application but is not related to a specific task (bundle).</string>
 	<key>mainMenu</key>
 	<dict>
 		<key>excludedItems</key>
@@ -71,7 +72,6 @@
 			<string>BBB8AE46-0694-4453-B6C5-9B9633B891B2</string>
 			<string>------------------------------------</string>
 			<string>E5142394-B07A-11D9-8EC4-000D93589AF6</string>
-			<string>012C6C9B-07CC-40B8-A10B-B95B253A94A1</string>
 			<string>C6C9B7F9-1023-4AB9-A5E6-1011211E169E</string>
 			<string>89831F2D-FF74-497D-B7FF-BFC2E2AA3896</string>
 			<string>4D4418A6-78E0-4D8A-BB7C-9C6F061AA4C0</string>
