Add Copy to RTF command – ⌃⌥⌘C
Based on code from Brad Choate, originally written by Max Muermann and improved by Nic Williams.

--- a/info.plist
+++ b/info.plist
@@ -13,6 +13,7 @@
 		<key>items</key>
 		<array>
 			<string>6E779E48-F146-49BF-B60C-EFDFD1380772</string>
+			<string>6F9D791B-B8E5-456D-A574-1B5C71F232FF</string>
 			<string>950B3108-E2E3-414E-9C4C-EE068F59A895</string>
 			<string>7AE6F783-F162-4063-850D-1441441849D8</string>
 			<string>ED204720-38FC-427C-B91E-D6AE866DAE3A</string>
