Display upgrade message on ⌘Q for outdated versions
Because of an error in the upgrade mechanism of a recent nightly build it would not check for updates for the application but would still check for bundle updates. This command will prompt users with outdated versions to check manually for an update.

--- a/info.plist
+++ b/info.plist
@@ -10,6 +10,10 @@
 	<string>This bundle has functionality which add to the application but is not related to a specific task (bundle).</string>
 	<key>mainMenu</key>
 	<dict>
+		<key>excludedItems</key>
+		<array>
+			<string>615998FE-A13B-4199-A670-E5A892A1C43A</string>
+		</array>
 		<key>items</key>
 		<array>
 			<string>6E779E48-F146-49BF-B60C-EFDFD1380772</string>
