--- a/Commands/Create CSS from Theme.plist
+++ b/Commands/Create CSS from Theme.plist
@@ -5,7 +5,7 @@
 	<key>beforeRunningCommand</key>
 	<string>nop</string>
 	<key>command</key>
-	<string>#!/System/Library/Frameworks/Ruby.framework/Versions/1.8/usr/bin/ruby
+	<string>#!/usr/bin/env ruby18
 require "#{ENV['TM_BUNDLE_SUPPORT']}/lib/doctohtml.rb"
 print generate_stylesheet_from_theme()</string>
 	<key>input</key>
