Let Relaunch TextMate preserve session state (if disabled)

--- a/Commands/Restart TextMate.plist
+++ b/Commands/Restart TextMate.plist
@@ -17,7 +17,7 @@
     sleep .2;
   done
 
-  open "$TM_APP_PATH"
+  open "$TM_APP_PATH" --args -disableSessionRestore NO
 
 } &amp;&gt;/dev/null &amp;</string>
 	<key>input</key>
